# ScruPeak

./: .gitignore  ADMIN_ARCHITECTURE_DIAGRAM.md  ADMIN_IMPLEMENTATION_CHECKLIST.md  ADMIN_IMPLEMENTATION_COMPLETE.md  ADMIN_IMPLEMENTATION_FINAL_REPORT.md  ADMIN_QUICK_REFERENCE.md  ADMIN_RBAC_SETUP.md  ADMIN_SYSTEM_COMPLETE.md  ADMIN_SYSTEM_MASTER_SUMMARY.md  API_REFERENCE.md  ARCHITECTURE_DIAGRAM.md  BACKEND_CHECKLIST.md  BACKEND_COMPLETE.md  BACKEND_FILE_STRUCTURE.md  BACKEND_IMPLEMENTATION_SUMMARY.md  BACKEND_MAIN_TEMPLATE.py  BACKEND_README.md  BACKEND_SETUP_COMPLETE.md  CLOUD_DEPLOYMENT.md  COMPLETE_BUILD_SUMMARY.md  COMPLETION_CHECKLIST_PHASE_3.md  COMPLETION_SUMMARY.md  CRITICAL_SYSTEMS_COMPLETE.md  DATABASE_SCHEMA.sql  DATABASE_SETUP.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_GUIDE_95_PERCENT.md  DEPLOYMENT_GUIDE_CRITICAL_SYSTEMS.md  DIRECTORY_STRUCTURE.md  DOCUMENTATION_GUIDE.md  DOCUMENTATION_INDEX.md  DOCUMENTATION_INDEX_COMPLETE.md  EXECUTIVE_SUMMARY.md  FINAL_IMPLEMENTATION_CHECKLIST.md  FINAL_STATUS_REPORT.py  FINAL_SUMMARY.md  FRONTEND_FEATURE_GUIDE.md  FRONTEND_IMPLEMENTATION.md  FRONTEND_NEXTJS_TEMPLATE.js  (+58 more)
apps/backend/: .env.example  ARCHITECTURE.md  BUILD_SUMMARY.md  DEEPSEEK_AI_INTEGRATION.md  DOCUMENTATION_INDEX.md  Dockerfile  IMPLEMENTATION_STATUS_PHASE2.md  PAYMENT_PROCESSING_SUMMARY.md  README.md  all_land_tests.txt  backend_test_results.txt  create_test_db.py  debug_import.py  debug_run.py  final_tests.txt  health_check.py  init_db.py  landbiznes.db  load_test_suite.py  pyproject.toml  requirements.txt  seed_db.py  startup_log_2.txt  test.db  test_auth_8001.py  test_auth_endpoints.py  test_output.txt  verify_backend.py  verify_registry_setup.py  visibility_test.txt  visibility_test_v2.txt  visibility_test_v3.txt
apps/backend/app/: __init__.py  main.py  tasks.py
apps/backend/scripts/: add_parcel_id.py  (+4 more)
(+383 files in other folders)
