[package]
name = "land-registry"
version = "0.1.0"
description = "Solana Smart Contract for ScruPeak Registry"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "land_registry"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
